--- a/GreenForce/app/src/main/res/values/colors.xml
+++ b/GreenForce/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="redOrange">#e64d3c</color>
+    <color name="redOrangeDark">#ee4214</color>
 </resources>
