--- a/GreenForce/app/src/main/res/values/styles.xml
+++ b/GreenForce/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#EA1D8708</item> <!-- Ne znam sta su prva i treca za sad -->
+        <item name="colorPrimaryDark">#EA1D8708</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
