--- a/GreenForce/app/src/main/res/layout/activity_login.xml
+++ b/GreenForce/app/src/main/res/layout/activity_login.xml
@@ -26,9 +26,10 @@
         android:id="@+id/editTextEmailLoginActivity"
         android:layout_width="220dp"
         android:layout_height="25dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="@string/email"
+
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +43,7 @@
         android:layout_width="220dp"
         android:layout_height="25dp"
         android:layout_marginTop="24dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
