--- a/GreenForce/app/src/main/res/layout/fragment_registration_data.xml
+++ b/GreenForce/app/src/main/res/layout/fragment_registration_data.xml
@@ -11,7 +11,7 @@
         android:id="@+id/editTextEmailRegistrationFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="212dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
@@ -40,7 +40,7 @@
         android:id="@+id/editTextNameRegistrationFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
@@ -54,7 +54,7 @@
         android:id="@+id/editTextSurnameRegistrationFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Surname"
         android:inputType="textPersonName"
@@ -68,7 +68,7 @@
         android:id="@+id/editTextPhoneNumberRegistrationFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Phone number"
         android:inputType="number"
@@ -82,7 +82,7 @@
         android:id="@+id/editTextPasswordRegistrationFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
