--- a/GreenForce/app/src/main/res/layout/activity_home_page.xml
+++ b/GreenForce/app/src/main/res/layout/activity_home_page.xml
@@ -37,10 +37,11 @@
 
         <ImageView
             android:id="@+id/profile_card_icon"
-            android:layout_height="70dp"
-            android:layout_width="70dp"
+            android:layout_width="90dp"
+            android:layout_height="66dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
-            />
+            android:src="@drawable/profile_card_image_foreground" />
 
 
 
@@ -73,8 +74,10 @@
         <ImageView
             android:id="@+id/friends_card_icon"
             android:layout_height="70dp"
-            android:layout_width="70dp"
+            android:layout_width="90dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
+            android:src="@drawable/friends_card_image_foreground"
             />
         <TextView
             android:id="@+id/friends_text"
