--- a/GreenForce/app/src/main/res/drawable/profile_card_image_foreground.xml
+++ b/GreenForce/app/src/main/res/drawable/profile_card_image_foreground.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="168dp"
-    android:height="168dp"
-    android:viewportWidth="40.37931"
-    android:viewportHeight="35.37931"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="22.611645"
+    android:viewportHeight="22.611645"
     android:tint="#15A811">
-  <group android:translateX="8.689655"
-      android:translateY="8.689655">
+  <group android:translateX="-0.6941775"
+      android:translateY="-0.6941775">
       <path
           android:fillColor="#FF000000"
           android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
