--- a/GreenForce/app/src/main/res/layout/activity_home_page.xml
+++ b/GreenForce/app/src/main/res/layout/activity_home_page.xml
@@ -110,7 +110,10 @@
             android:id="@+id/rank_card_icon"
             android:layout_height="70dp"
             android:layout_width="70dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
+            android:src="@drawable/rank_card_image_foreground"
+
             />
 
         <TextView
@@ -144,7 +147,9 @@
             android:id="@+id/mark_a_spot_card_icon"
             android:layout_height="70dp"
             android:layout_width="70dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
+            android:src="@drawable/add_card_image_foreground"
             />
 
         <TextView
@@ -165,7 +170,6 @@
         android:id="@+id/events_card"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginBottom="28dp"
         android:background="@color/colorWhite"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -173,25 +177,26 @@
         app:layout_constraintHorizontal_bias="0.861"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rank_card"
-        app:layout_constraintVertical_bias="0.488">
+        app:layout_constraintVertical_bias="0.47000003">
 
         <ImageView
             android:id="@+id/events_card_icon"
-            android:layout_height="70dp"
             android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginTop="10dp"
+            android:src="@drawable/events_card_image_foreground" />
 
         <TextView
             android:id="@+id/events_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="25dp"
             android:text="@string/events_text"
             android:textColor="@color/greenText"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="25dp"
             tools:ignore="HardcodedText" />
     </androidx.cardview.widget.CardView>
 
