--- a/GreenForce/app/src/main/res/layout/activity_home_page.xml
+++ b/GreenForce/app/src/main/res/layout/activity_home_page.xml
@@ -23,38 +23,39 @@
         tools:ignore="HardcodedText" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/proile_card"
+        android:id="@+id/profile_card"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:background="@color/colorWhite"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.198">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.254">
 
         <ImageView
             android:id="@+id/profile_card_icon"
             android:layout_width="90dp"
             android:layout_height="66dp"
-            android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
             android:src="@drawable/profile_card_image_foreground" />
-
 
 
         <TextView
             android:id="@+id/profile_card_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="30dp"
             android:text="@string/profile_card_text"
             android:textColor="@color/greenText"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="30dp"
             tools:ignore="HardcodedText" />
     </androidx.cardview.widget.CardView>
 
@@ -62,106 +63,69 @@
         android:id="@+id/friends_card"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:layout_marginBottom="176dp"
         android:background="@color/colorWhite"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/proile_card"
-        app:layout_constraintVertical_bias="0.135">
+        app:layout_constraintTop_toBottomOf="@+id/profile_card"
+        app:layout_constraintVertical_bias="0.281">
 
         <ImageView
             android:id="@+id/friends_card_icon"
-            android:layout_height="70dp"
             android:layout_width="90dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/friends_card_image_foreground"
-            />
+            android:layout_marginTop="10dp"
+            android:src="@drawable/friends_card_image_foreground" />
+
         <TextView
             android:id="@+id/friends_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="25dp"
             android:text="@string/friends_text"
             android:textColor="@color/greenText"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="25dp"
             tools:ignore="HardcodedText" />
 
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/rank_card"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:background="@color/colorWhite"
-        app:cardCornerRadius="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.861"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/proile_card"
-        app:layout_constraintVertical_bias="0.135">
-
-        <ImageView
-            android:id="@+id/rank_card_icon"
-            android:layout_height="70dp"
-            android:layout_width="70dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/rank_card_image_foreground"
-
-            />
-
-        <TextView
-            android:id="@+id/rank_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/rank_text"
-            android:textColor="@color/greenText"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="35dp"
-            tools:ignore="HardcodedText" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mark_a_spot_card"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginTop="44dp"
         android:background="@color/colorWhite"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/friends_card"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.358">
 
         <ImageView
             android:id="@+id/mark_a_spot_card_icon"
-            android:layout_height="70dp"
             android:layout_width="70dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/add_card_image_foreground"
-            />
+            android:layout_marginTop="10dp"
+            android:src="@drawable/add_card_image_foreground" />
 
         <TextView
             android:id="@+id/mark_a_spot_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="40dp"
             android:text="@string/add_text"
             android:textColor="@color/greenText"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="40dp"
             tools:ignore="HardcodedText" />
 
     </androidx.cardview.widget.CardView>
@@ -174,10 +138,10 @@
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.861"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.613"
+        app:layout_constraintStart_toEndOf="@+id/mark_a_spot_card"
         app:layout_constraintTop_toBottomOf="@+id/rank_card"
-        app:layout_constraintVertical_bias="0.47000003">
+        app:layout_constraintVertical_bias="0.358">
 
         <ImageView
             android:id="@+id/events_card_icon"
@@ -194,6 +158,44 @@
             android:layout_gravity="bottom"
             android:layout_marginLeft="25dp"
             android:text="@string/events_text"
+            android:textColor="@color/greenText"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/rank_card"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginBottom="176dp"
+        android:background="@color/colorWhite"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.613"
+        app:layout_constraintStart_toEndOf="@+id/friends_card"
+        app:layout_constraintTop_toBottomOf="@+id/profile_card"
+        app:layout_constraintVertical_bias="0.281">
+
+        <ImageView
+            android:id="@+id/rank_card_icon"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/rank_card_image_foreground"
+
+            />
+
+        <TextView
+            android:id="@+id/rank_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="35dp"
+            android:text="@string/rank_text"
             android:textColor="@color/greenText"
             android:textSize="25sp"
             android:textStyle="bold"
