--- a/GreenForce/app/src/main/res/layout/activity_login.xml
+++ b/GreenForce/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="@string/email"
-
+        android:textColor="@color/colorBlack"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +46,7 @@
         android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="@string/password"
+        android:textColor="@color/colorBlack"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
