--- a/GreenForce/app/src/main/res/layout/fragment_registration_data.xml
+++ b/GreenForce/app/src/main/res/layout/fragment_registration_data.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_style"
         android:ems="10"
+        android:textColor="@color/colorBlack"
         android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,6 +30,7 @@
         android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Username"
+        android:textColor="@color/colorBlack"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +45,7 @@
         android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Name"
+        android:textColor="@color/colorBlack"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +60,7 @@
         android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Surname"
+        android:textColor="@color/colorBlack"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +76,7 @@
         android:ems="10"
         android:hint="Phone number"
         android:inputType="number"
+        android:textColor="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +91,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
