--- a/GreenForce/app/src/main/res/layout/fragment_my_profile_change_password.xml
+++ b/GreenForce/app/src/main/res/layout/fragment_my_profile_change_password.xml
@@ -54,6 +54,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="Old Password"
+            android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorBlack"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +63,8 @@
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11"
-            app:layout_constraintVertical_bias="0.031" />
+            app:layout_constraintVertical_bias="0.031"
+                />
 
         <TextView
             android:id="@+id/textView12"
@@ -80,6 +83,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="New Password"
+            android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorBlack"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,6 +111,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="New Password"
+            android:textColorHint="@color/colorWhite"
             android:inputType="textPassword"
             android:textColor="@color/colorBlack"
             app:layout_constraintBottom_toBottomOf="parent"
