--- a/GreenForce/app/src/main/res/layout/activity_my_profile.xml
+++ b/GreenForce/app/src/main/res/layout/activity_my_profile.xml
@@ -69,6 +69,19 @@
             app:layout_constraintVertical_bias="0.125"
             app:srcCompat="@drawable/profile_default" />
 
+        <TextView
+            android:id="@+id/changePhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change Photo"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_profile_image" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>>
     <FrameLayout
         android:layout_weight="1"
