--- a/GreenForce/app/src/main/res/values/colors.xml
+++ b/GreenForce/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="redOrangeDark">#ee4214</color>
     <color name="greenText">#F215A811</color>
     <color name="greenBlue">#09F18C</color>
+    <color name="greyColor">#777777</color>
     <color name="colorBlack">#000000</color>
 </resources>
