--- a/GreenForce/app/src/main/res/layout/activity_add_friends_via_bluetooth.xml
+++ b/GreenForce/app/src/main/res/layout/activity_add_friends_via_bluetooth.xml
@@ -20,6 +20,18 @@
 
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <Button
+            android:id="@+id/btn_connect_via_bt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="BTCONNECT" />
+
+        <Button
+            android:id="@+id/btn_send_fried_request"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="BTSEND" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -93,12 +105,14 @@
                 android:background="@color/greyColor"
                 android:text="     Nearby devices"
                 android:textStyle="bold" />
+
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/listViewDevic"
                 android:paddingTop="5dp"
                 android:elevation="2dp"></ListView>
+
 
         </LinearLayout>
 
