--- a/GreenForce/app/src/main/res/values/styles.xml
+++ b/GreenForce/app/src/main/res/values/styles.xml
@@ -6,9 +6,10 @@
         <item name="colorPrimary">#EA1D8708</item> <!-- Ne znam sta su prva i treca za sad -->
         <item name="colorPrimaryDark">#EA1D8708</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">?android:attr/textColorPrimaryInverse</item>
+        <item name="android:textColorPrimary">@color/colorBlack</item>
 
     </style>
+
 
 
 
