--- a/GreenForce/app/src/main/res/layout/activity_add_friends_via_maps.xml
+++ b/GreenForce/app/src/main/res/layout/activity_add_friends_via_maps.xml
@@ -20,56 +20,63 @@
 
         app:popupTheme="@style/AppTheme.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="@+id/appBarAddFriendsViaMap"
+        app:layout_constraintStart_toStartOf="@+id/appBarAddFriendsViaMap"
+        app:layout_constraintTop_toBottomOf="@+id/appBarAddFriendsViaMap">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-
-            app:layout_constraintEnd_toEndOf="@+id/appBarAddFriendsViaMap"
-            app:layout_constraintStart_toStartOf="@+id/appBarAddFriendsViaMap"
+            android:layout_height="50dp"
+            android:layout_weight="0.4"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBarAddFriendsViaMap">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="0.4"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appBarAddFriendsViaMap">
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="0.4" />
 
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_weight="0.4" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="0.3"
+                android:gravity="right"
+                android:text="@string/radius"
+                android:textSize="19sp"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_weight="0.3"
-                    android:gravity="right"
-                    android:text="@string/radius"
-                    android:textSize="19sp"
-
-                    />
-
-                <EditText
-                    android:layout_width="30dp"
-                    android:id="@+id/radius"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="12dp"
-                    android:layout_weight="0.3" />
-
-            </LinearLayout>
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/addFriendsMapsView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.6"
                 />
+
+            <EditText
+                android:id="@+id/radius"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:layout_weight="0.3" />
+
         </LinearLayout>
+
+
+    </LinearLayout>
+
+    <fragment
+        android:id="@+id/google_maps_fragment_view_location"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:context=".AddFriendsViaMapsActivity"
+        android:layout_height="0dp" />
 
 
 
