--- a/GreenForce/app/src/main/res/layout/activity_add_friends_via_bluetooth.xml
+++ b/GreenForce/app/src/main/res/layout/activity_add_friends_via_bluetooth.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddFriendsViaBluetoothActivity">
+    tools:context=".activities.AddFriendsViaBluetoothActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
