--- a/GreenForce/app/src/main/res/layout/activity_splash_screen.xml
+++ b/GreenForce/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash_screen"
-    tools:context=".SplashScreenActivity">
+    tools:context=".activities.SplashScreenActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
