--- a/GreenForce/app/src/main/res/layout/fragment_my_profile_change_password.xml
+++ b/GreenForce/app/src/main/res/layout/fragment_my_profile_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentMyProfileChangePassword">
+    tools:context=".fragments.FragmentMyProfileChangePassword">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="334dp"
