--- a/GreenForce/app/src/main/res/layout/activity_add_friends_via_maps.xml
+++ b/GreenForce/app/src/main/res/layout/activity_add_friends_via_maps.xml
@@ -33,7 +33,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_weight="0.4"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,13 +43,13 @@
 
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="82dp"
                 android:layout_height="40dp"
                 android:layout_weight="0.4" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.3"
                 android:gravity="right"
                 android:text="@string/radius"
@@ -60,9 +60,10 @@
             <EditText
                 android:id="@+id/radius"
                 android:layout_width="30dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="12dp"
-                android:layout_weight="0.3" />
+                android:layout_weight="0.3"
+                android:inputType="number" />
 
         </LinearLayout>
 
