--- a/GreenForce/app/src/main/res/values/styles.xml
+++ b/GreenForce/app/src/main/res/values/styles.xml
@@ -7,7 +7,13 @@
         <item name="colorPrimaryDark">#EA1D8708</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/colorBlack</item>
+    </style>
+    <style name="BottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+    </style>>
 
+    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 
