--- a/GreenForce/app/src/main/res/menu/menu_friends_list.xml
+++ b/GreenForce/app/src/main/res/menu/menu_friends_list.xml
@@ -6,15 +6,15 @@
 
         >
 
-
-        <item
-            android:orderInCategory="100"
-            android:icon="@drawable/search_icon"
-            app:showAsAction="ifRoom"
-            android:title=""
-            />
-        <item
-            android:orderInCategory="100"
+    <item
+        android:id="@+id/app_bar_search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:orderInCategory="100"
+        android:title="Search"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always" />
+    <item
+            android:orderInCategory="101"
             android:icon="@drawable/notifications_icon"
             app:showAsAction="ifRoom"
             android:title=""
