--- a/GreenForce/app/src/main/res/layout/activity_my_friends.xml
+++ b/GreenForce/app/src/main/res/layout/activity_my_friends.xml
@@ -17,13 +17,30 @@
             android:layout_weight="0.1"
             android:theme="@style/AppTheme.AppBarOverlay"
             tools:ignore="MissingConstraints">
+          <androidx.appcompat.widget.LinearLayoutCompat
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
+              <androidx.appcompat.widget.Toolbar
+                  android:id="@+id/friends_toolbar"
+                  android:layout_width="0dp"
+                  android:layout_weight="0.9"
+                  android:layout_height="match_parent"
+                  android:background="?attr/colorPrimary"
+                  app:popupTheme="@style/AppTheme.PopupOverlay">
+              </androidx.appcompat.widget.Toolbar>
+              <include
+                  layout="@layout/notification_bell"
+                  android:id="@+id/notificationBell"
+                  android:layout_width="0dp"
+                  android:layout_weight="0.13"
+                  android:layout_height="match_parent"
+                  android:layout_gravity="end|bottom"
+                  />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/friends_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+          </androidx.appcompat.widget.LinearLayoutCompat>
+
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <ListView
