--- a/GreenForce/app/src/main/res/layout/activity_home_page.xml
+++ b/GreenForce/app/src/main/res/layout/activity_home_page.xml
@@ -42,7 +42,7 @@
             android:layout_height="66dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:src="@drawable/profile_card_image_foreground" />
+            app:srcCompat="@drawable/profile_card_image_foreground" />
 
 
         <TextView
