--- a/GreenForce/app/src/main/res/layout/nearby_device.xml
+++ b/GreenForce/app/src/main/res/layout/nearby_device.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -19,7 +20,7 @@
         android:id="@+id/imageViewNearbyDevice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/add_friends_icon"
+        app:srcCompat="@drawable/add_friends_icon"
         android:layout_margin="5dp"
         android:layout_weight="1"
 
