--- a/GreenForce/app/src/main/res/layout/ranked_user_layout.xml
+++ b/GreenForce/app/src/main/res/layout/ranked_user_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center"
+    android:background="@color/colorWhite"
     android:padding="5dp">
     <LinearLayout
         android:layout_width="0dp"
